// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldLevelHelp allows to specify mode content and close 1`] = `
<div>
  <label>
    Port Number
  </label>
  <FieldLevelHelp
    close="true"
    content="Enter Port number between the 4000-5000 range"
    id="fieldlevelname1"
    mode="popover"
  >
    <OverlayTrigger
      defaultOverlayShown={false}
      overlay={
        <Popover
          bsClass="popover"
          id="popover"
          placement="right"
        >
          Enter Port number between the 4000-5000 range
        </Popover>
      }
      placement="top"
      rootClose={true}
      trigger={
        Array [
          "click",
        ]
      }
    >
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="link"
        disabled={false}
        onClick={[Function]}
      >
        <button
          className="btn btn-link"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <Icon
            name="info"
            type="pf"
          >
            <PatternflyIcon
              className=""
              name="info"
            >
              <span
                aria-hidden="true"
                className="pficon pficon-info"
              />
            </PatternflyIcon>
          </Icon>
        </button>
      </Button>
    </OverlayTrigger>
  </FieldLevelHelp>
</div>
`;

exports[`FieldLevelHelp renders properly 1`] = `
<FieldLevelHelp
  close="true"
  content={null}
  id="fieldlevelname1"
>
  <OverlayTrigger
    defaultOverlayShown={false}
    overlay={
      <Popover
        bsClass="popover"
        id="popover"
        placement="right"
      />
    }
    placement="top"
    rootClose={true}
    trigger={
      Array [
        "click",
      ]
    }
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="link"
      disabled={false}
      onClick={[Function]}
    >
      <button
        className="btn btn-link"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <Icon
          name="info"
          type="pf"
        >
          <PatternflyIcon
            className=""
            name="info"
          >
            <span
              aria-hidden="true"
              className="pficon pficon-info"
            />
          </PatternflyIcon>
        </Icon>
      </button>
    </Button>
  </OverlayTrigger>
</FieldLevelHelp>
`;
